X-editable changelog
=============================


Version 1.1.1 wip
----------------------------   
[enh] 'ajaxOptions' parameter for advanced ajax configuration (vitalets)  
[enh] success callback can return object to overwrite submitted value (vitalets)  
       
       
Version 1.1.0 Nov 27, 2012
----------------------------   
[enh #11] icon cancel changed to 'cross' (tarciozemel)  
[enh] added support for IE7+ (vitalets)  
[enh #9] 'name' or 'id' is not required anymore (vitalets)      
[enh] 'clear' button added in date and dateui (vitalets)      
[enh] form template changed: added DIV.editable-input, DIV.editable.buttons and $.fn.editableform.buttons (vitalets)      
[enh] new input type: checklist (vitalets)      
[enh] updated docs: inputs dropdown menu, global templates section (vitalets)      
                            

Version 1.0.1 Nov 22, 2012
----------------------------          
[enh] contribution guide in README.md (vitalets)   
[enh #7] 'shown', 'hidden' events added (vitalets)         
[enh #1] params can be a function to calculate it dynamically (vitalets)         
[enh #6] do not preventDetault() in click when toggle='manual'. This allows to have clickable links (vitalets)         
[bug #3] should not mark element with unsave css if url is user's function (vitalets)         
          
                 
Version 1.0.0 Nov 19, 2012 
----------------------------
Initial release. This library is new life of bootstrap-editable (1.1.4) that was strongly refactored and improved.
Main features:
- support not only bootstrap but any core library: bootstrap, jquery-ui or pure jquery 
- different container classes to show form: popover, tooltip, poshytip, etc
- inline and popup versions 
- new directory structure and logic in separate js files allowing easy contribution
                                                                
It is not fully compatible with bootstrap-editable but has mainly the same interface and api.