@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.1.1 wip
 ----------------------------   
+[enh #13] 'onblur' option: to cancel, submit or ignore when user clicks outside the form (vitalets)  
 [enh] 'ajaxOptions' parameter for advanced ajax configuration (vitalets)  
 [enh] success callback can return object to overwrite submitted value (vitalets)  
        
